# deviceatlas-cloud-c

./: .cirrus.yml  .travis.yml  CMakeLists.txt  Cargo.toml  LICENSE  README.md  build.rs  cache_providers.h  cloud.conf  contributors.txt  dacloud.c  dacloud.h  dacloud_cache.c  dacloud_cache.h  dacloud_header_property.c  dacloud_mem.c  dacloud_mem.h  dacloud_util.c  dacloud_util.h  file_cache_provider.c  file_cache_provider.h  index.html  memcached_cache_provider.c  memcached_cache_provider.h  memory_cache_provider.c  memory_cache_provider.h  params.json  prod-cloud.conf  prod-file.conf  prod-memcached.conf  prod-memory.conf  prod-redis.conf  redis_cache_provider.c  redis_cache_provider.h  sonar-project.properties
cmake/Modules/: FindJeMalloc.cmake
cppwrapper/: CMakeLists.txt  dacloud.cpp  dacloud.hpp
cppwrapper/examples/: CMakeLists.txt  example.cpp
examples/: CMakeLists.txt  batch_list_sample.csv  dacloud.rs  dacloud_batch.c  dacloud_cppclient.cpp  dacloud_fcgi.c  dacloud_mt.c  dacloud_simplebench.c  dacloud_talloc.c
fuzz/: CMakeLists.txt  examplefuzz.cpp
fuzz/corpus/: 1  2
gowrapper/examples/: example.go
gowrapper/src/dacloud/: dacloud.go
py3wrapper/: dacloud.c  setup.py
py3wrapper/examples/: dacloud.py
tests/: CMakeLists.txt  dacloud_tests.c
wrappers/: dacloud.cpp  dacloud.hpp
wrappers/examples/: example.cpp
