include_directories(..)
add_executable(dacloud_batch dacloud_batch.c)
target_link_libraries(dacloud_batch dacloud)
add_executable(dacloud_simplebench dacloud_simplebench.c)
target_link_libraries(dacloud_simplebench dacloud)
add_executable(dacloud_cppclient dacloud_cppclient.cpp)
target_link_libraries(dacloud_cppclient dacloud)
add_definitions(-pthread)
add_executable(dacloud_mt dacloud_mt)
target_link_libraries(dacloud_mt pthread dacloud)
