include_directories(..)
add_executable(dacloud_batch dacloud_batch.c)
target_link_libraries(dacloud_batch dacloud)
add_executable(dacloud_simplebench dacloud_simplebench.c)
target_link_libraries(dacloud_simplebench dacloud)
add_executable(dacloud_cppclient dacloud_cppclient.cpp)
target_link_libraries(dacloud_cppclient dacloud)
add_definitions(-pthread)
add_executable(dacloud_mt dacloud_mt.c)
target_link_libraries(dacloud_mt pthread dacloud)

find_path(FCGI fcgi_stdio.h)

if (FCGI)
    find_library(FCGILIB fcgi)
    message(STATUS "Fcgi support")
    add_executable(dacloud_fcgi dacloud_fcgi.c)
    target_link_libraries(dacloud_fcgi ${FCGILIB} dacloud)
endif()
